--- a/client/src/App.css
+++ b/client/src/App.css
@@ -195,18 +195,23 @@ textarea:focus {
 .search {
   display: flex;
   align-items: center;
-  background-color: rgb(233, 233, 233);
+  background-color: #bbc6d1;
   border-radius: 10px;
   padding: 5px;
   margin-bottom: 1.5em;
+  margin-top: 1rem;
 }
 
 .search input {
   border: none;
-  background-color: rgb(233, 233, 233);
+  background-color: #bbc6d1;
   width: 100%;
+  
 }
 
 .search input:focus {
   outline: none;
+}
+.search input::placeholder{
+  color: rgb(82, 81, 81);
 }
